OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Commercial_Programs__c.field-meta.xml
<CustomField>
    <fullName>POE_Commercial_Programs__c</fullName>
    <description>Enable the credentials component for the selected programs. (PER-2126)</description>
    <inlineHelpText>Enable the credentials component for the selected programs.</inlineHelpText>
    <label>Non-Chuzo Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spectrum</fullName>
                <label>Spectrum Commercial</label>
            </value>
            <value>
                <fullName>Optimum</fullName>
                <label>Optimum Commercial</label>
            </value>
            <value>
                <fullName>Verizon</fullName>
                <label>Verizon Commercial</label>
            </value>
            <value>
                <fullName>Verizon Residential</fullName>
            </value>
            <value>
                <fullName>Windstream D2D</fullName>
            </value>
            <value>
                <fullName>Xfinity</fullName>
            </value>
            <value>
                <fullName>Verizon Fios D2D</fullName>
            </value>
            <value>
                <fullName>Telogix</fullName>
                <isActive>false</isActive>
                <label>Telogix Commercial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>