OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_County__c.field-meta.xml
<CustomField>
    <fullName>POE_County__c</fullName>
    <label>County</label>
    <length>60</length>
    <type>Text</type>
</CustomField>