OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>POE_Deactivation_Reason__c</fullName>
    <label>Deactivation Reason</label>
    <type>TextArea</type>
</CustomField>