OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_DL_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>POE_DL_Expiration_Date__c</fullName>
    <label>DL Expiration Date</label>
    <type>Date</type>
</CustomField>