OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Dl_State__c.field-meta.xml
<CustomField>
    <fullName>POE_Dl_State__c</fullName>
    <label>DL State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>vlocity_cmt__State</valueSetName>
    </valueSet>
</CustomField>