OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Email_Charter__c.field-meta.xml
<CustomField>
    <fullName>POE_Email_Charter__c</fullName>
    <formula>IF( NOT(ISBLANK(UID_Spectrum__c)), BR() &amp; &quot;Charter&quot; &amp; BR() &amp; BR() &amp; &quot;User Id:&quot; &amp; UID_Spectrum__c  &amp; BR() &amp; BR(), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Body Charter</label>
    <type>Text</type>
</CustomField>