OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Email_EarthLink__c.field-meta.xml
<CustomField>
    <fullName>POE_Email_EarthLink__c</fullName>
    <formula>IF( NOT(ISBLANK(POE_365Pass__c )),BR() &amp; &quot;EarthLink&quot; &amp; BR() &amp; BR() &amp; &quot;Partner Portal User Name: &quot; &amp;  Email &amp; BR() &amp; &quot;Partner Portal Temporary Password:&quot; &amp;  POE_365Pass__c &amp; BR() &amp; BR() &amp; &quot;AOE Order Entry User Name:&quot; &amp;  POE_AOE_Id__c &amp; BR() &amp; &quot;AOE Temporary Password:&quot; &amp; POE_AOE_Pass__c &amp; BR() &amp; BR(), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Body EarthLink</label>
    <type>Text</type>
</CustomField>