OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Email_TMobile__c.field-meta.xml
<CustomField>
    <fullName>POE_Email_TMobile__c</fullName>
    <formula>IF( NOT(ISBLANK(POE_TMobileDealer__c )),BR() &amp; &quot;T-Mobile&quot; &amp; BR() &amp; BR() &amp; &quot;NTID:&quot; &amp;  POE_TMobileDealer__c  &amp; BR() &amp; &quot;NTID Temporary Password:&quot; &amp;  UID_TMobile__c  &amp; BR() &amp; &quot;Credentials&quot; &amp; BR() &amp;  BR() &amp; &quot;Dealer Code:&quot; &amp;  POE_T_Mobile_User__c  &amp; BR() &amp; &quot;Dealer Code Temporary Password:&quot; &amp;  POE_TMobile_Pass__c  &amp; BR() &amp; BR(), &apos;&apos;)</formula>
    <label>Email Body T-Mobile</label>
    <type>Text</type>
</CustomField>