OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Email_Windstream__c.field-meta.xml
<CustomField>
    <fullName>POE_Email_Windstream__c</fullName>
    <formula>IF(POE_WS_Email__c , BR() &amp;  &quot;Windstream&quot; &amp; BR() &amp; BR() &amp; &quot;PerfectSource (Traditional)&quot; &amp; BR() &amp; BR() &amp; &quot;You will recieve an email to update the password and create your account.&quot;, &apos;&apos;) &amp; 
IF(NOT(ISBLANK(UID_Windstream__c)) , BR() &amp; &quot;Winsales (D2D)&quot;  &amp; BR() &amp; BR()  &amp; &quot;Username Login:&quot; &amp;  UID_Windstream__c  &amp; BR() &amp; &quot;Password:&quot; &amp;  POE_WS_Pass__c &amp; BR() &amp; &quot;Vendor ID (VID):&quot; &amp;  POE_VendorId__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Body Windstream</label>
    <type>Text</type>
</CustomField>