OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Enable_Trial_Period__c.field-meta.xml
<CustomField>
    <fullName>POE_Enable_Trial_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Trial Period</label>
    <type>Checkbox</type>
</CustomField>