OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Existing_Agent_Flag__c.field-meta.xml
<CustomField>
    <fullName>POE_Existing_Agent_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Agent Flag</label>
    <type>Checkbox</type>
</CustomField>