OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Expiration_days_Number__c.field-meta.xml
<CustomField>
    <fullName>POE_Expiration_days_Number__c</fullName>
    <label>Chuzo Password Expiration Days Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>