OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Functional_Role__c.field-meta.xml
<CustomField>
    <fullName>POE_Functional_Role__c</fullName>
    <label>Functional Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office Representative</fullName>
                <label>Agent</label>
            </value>
            <value>
                <fullName>Office Manager</fullName>
                <label>Owner</label>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
                <isActive>false</isActive>
                <label>Director</label>
            </value>
            <value>
                <fullName>Door to Door</fullName>
                <isActive>false</isActive>
                <label>Door to Door</label>
            </value>
            <value>
                <fullName>Recruiter</fullName>
                <isActive>false</isActive>
                <label>Recruiter</label>
            </value>
            <value>
                <fullName>Retail</fullName>
                <isActive>false</isActive>
                <label>Retail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>