OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_isTmobileAllowed__c.field-meta.xml
<CustomField>
    <fullName>POE_isTmobileAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTmobileAllowed</label>
    <type>Checkbox</type>
</CustomField>