OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_On_Boarding_Process__c.field-meta.xml
<CustomField>
    <fullName>POE_On_Boarding_Process__c</fullName>
    <label>On Boarding Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>