OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Point_Of_Contact__c.field-meta.xml
<CustomField>
    <fullName>POE_Point_Of_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Point Of Contact</label>
    <type>Checkbox</type>
</CustomField>