OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Ready_For_Sell_Date__c.field-meta.xml
<CustomField>
    <fullName>POE_Ready_For_Sell_Date__c</fullName>
    <label>Ready For Sell Date</label>
    <type>Date</type>
</CustomField>