OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Ready_For_Sell_Days__c.field-meta.xml
<CustomField>
    <fullName>POE_Ready_For_Sell_Days__c</fullName>
    <formula>TODAY() - POE_Ready_For_Sell_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready For Sell Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>