OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Representative_Type__c.field-meta.xml
<CustomField>
    <fullName>POE_Representative_Type__c</fullName>
    <label>Representative Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Representative_Type</valueSetName>
    </valueSet>
</CustomField>