OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Retail_Programs__c.field-meta.xml
<CustomField>
    <fullName>POE_Retail_Programs__c</fullName>
    <label>Retail Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EarthLink</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
            <value>
                <fullName>Altice</fullName>
                <label>Optimum</label>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Spectrum API</fullName>
                <label>Spectrum</label>
            </value>
            <value>
                <fullName>Brightspeed</fullName>
            </value>
            <value>
                <fullName>DirecTV</fullName>
                <label>DIRECTV</label>
            </value>
            <value>
                <fullName>Charter/Spectrum</fullName>
                <isActive>false</isActive>
                <label>Spectrum DEPRECATED</label>
            </value>
            <value>
                <fullName>Viasat</fullName>
                <isActive>false</isActive>
                <label>Viasat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>