OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_RO_Status__c.field-meta.xml
<CustomField>
    <fullName>POE_RO_Status__c</fullName>
    <label>Rep Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More Information Needed</fullName>
            </value>
            <value>
                <fullName>Onboarding In Progress</fullName>
            </value>
            <value>
                <fullName>Ready To Sell</fullName>
            </value>
            <value>
                <fullName>Training In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>