OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>POE_SMS_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a Chuzo customer has consented to receiving text messages. (PER-2673)</description>
    <label>SMS Opt In</label>
    <type>Checkbox</type>
</CustomField>