OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>POE_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>