OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_T_Mobile_Email__c.field-meta.xml
<CustomField>
    <fullName>POE_T_Mobile_Email__c</fullName>
    <label>T-Mobile Email Address</label>
    <type>Email</type>
</CustomField>