OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_T_Mobile_User__c.field-meta.xml
<CustomField>
    <fullName>POE_T_Mobile_User__c</fullName>
    <label>T-Mobile User</label>
    <length>25</length>
    <type>Text</type>
</CustomField>