OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_TMobile_Pass__c.field-meta.xml
<CustomField>
    <fullName>POE_TMobile_Pass__c</fullName>
    <label>T-Mobile Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>