OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_TMobileDealer__c.field-meta.xml
<CustomField>
    <fullName>POE_TMobileDealer__c</fullName>
    <label>T-Mobile Dealer Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>