OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_VendorId__c.field-meta.xml
<CustomField>
    <fullName>POE_VendorId__c</fullName>
    <label>Windstream Vendor Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>