OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_WS_Email__c.field-meta.xml
<CustomField>
    <fullName>POE_WS_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Windstream Email Validation</label>
    <type>Checkbox</type>
</CustomField>