OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/PreferredFirstName__c.field-meta.xml
<CustomField>
    <fullName>PreferredFirstName__c</fullName>
    <inlineHelpText>If the contact has a preferred name, enter it here.</inlineHelpText>
    <label>Preferred First Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>