OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Principal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Principal_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Principal Owner</label>
    <type>Checkbox</type>
</CustomField>