OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Program_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Lead_Type__c</fullName>
    <description>Categorizes the type of lead based on the program or marketing initiative</description>
    <label>Program Lead Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optimum</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>ViaSat</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
            <value>
                <fullName>Earthlink</fullName>
            </value>
            <value>
                <fullName>DIRECTV</fullName>
            </value>
            <value>
                <fullName>Comcast/Xfinity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>