OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Program_Lead_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Program_Lead_Type_Other__c</fullName>
    <label>Program Lead Type (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>