OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/PV_VPNID_Pass__c.field-meta.xml
<CustomField>
    <fullName>PV_VPNID_Pass__c</fullName>
    <label>PV_VPNID Password</label>
    <length>30</length>
    <type>Text</type>
</CustomField>