OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Sales_Rep_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Responsible__c</fullName>
    <label>Sales Rep Responsible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>DTV BUS Recruiter</fullName>
            </value>
            <value>
                <fullName>ISG Regional Manager</fullName>
            </value>
            <value>
                <fullName>National Acct Mgr</fullName>
            </value>
            <value>
                <fullName>AT&amp;T Recruiter</fullName>
            </value>
            <value>
                <fullName>Broadband Recruiter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>