OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Second_Date_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Second_Date_Contacted__c</fullName>
    <description>Records the second follow-up contact date with the person account.</description>
    <label>Second Date Contacted</label>
    <type>Date</type>
</CustomField>