OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>Sold_Date__c</fullName>
    <label>Sold Date</label>
    <type>Date</type>
</CustomField>