OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/SR_Resource__c.field-meta.xml
<CustomField>
    <fullName>SR_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SR Resource</label>
    <type>Checkbox</type>
</CustomField>