OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Suggested_Provider_s__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Provider_s__c</fullName>
    <description>The recommended providers for the person account based on their needs.</description>
    <label>Suggested Provider(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>