OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Suggested_Provider_s_Cost__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Provider_s_Cost__c</fullName>
    <description>Records the estimated or quoted cost from the suggested provider.</description>
    <label>Suggested Provider(s) Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>