OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Third_Date_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Third_Date_Contacted__c</fullName>
    <description>Captures the third date of contact with the person account.</description>
    <label>Third Date Contacted</label>
    <type>Date</type>
</CustomField>