OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Time_zone__c.field-meta.xml
<CustomField>
    <fullName>Time_zone__c</fullName>
    <label>Time zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PV_TimeZone</valueSetName>
    </valueSet>
</CustomField>