OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/TMO_Email__c.field-meta.xml
<CustomField>
    <fullName>TMO_Email__c</fullName>
    <label>TMO Email</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>