OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/UID_DirecTV__c.field-meta.xml
<CustomField>
    <fullName>UID_DirecTV__c</fullName>
    <label>UID DIRECTV</label>
    <length>20</length>
    <type>Text</type>
</CustomField>