OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/UID_DirecTV_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>UID_DirecTV_Dealer_Code__c</fullName>
    <label>UID DIRECTV Dealer Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>