OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/UID_Frontier__c.field-meta.xml
<CustomField>
    <fullName>UID_Frontier__c</fullName>
    <label>UID Frontier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>