OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/UID_Frontier_Sales_Buddy__c.field-meta.xml
<CustomField>
    <fullName>UID_Frontier_Sales_Buddy__c</fullName>
    <label>UID Frontier Sales Buddy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>