OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/UID_Frontier_Sales_Buddy_Temp_Password__c.field-meta.xml
<CustomField>
    <fullName>UID_Frontier_Sales_Buddy_Temp_Password__c</fullName>
    <label>UID Frontier Sales Buddy Temp Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>