OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/UID_Spectrum__c.field-meta.xml
<CustomField>
    <fullName>UID_Spectrum__c</fullName>
    <label>UID Spectrum</label>
    <length>20</length>
    <type>Text</type>
</CustomField>