OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/UID_Spectrum_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>UID_Spectrum_Process_Status__c</fullName>
    <label>UID Spectrum Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Incomplete (Don&apos;t Need)</fullName>
            </value>
            <value>
                <fullName>Pending Partner</fullName>
            </value>
            <value>
                <fullName>Pending Program</fullName>
            </value>
            <value>
                <fullName>Pending Dealer</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>