OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/UID_T_Mobile_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>UID_T_Mobile_Process_Status__c</fullName>
    <label>UID T-Mobile Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Incomplete (Don&apos;t Need)</fullName>
                <isActive>false</isActive>
                <label>Incomplete (Don&apos;t Need)</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <isActive>false</isActive>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Pending Dealer</fullName>
                <isActive>false</isActive>
                <label>Pending Dealer</label>
            </value>
            <value>
                <fullName>Pending Partner</fullName>
                <isActive>false</isActive>
                <label>Pending Partner</label>
            </value>
            <value>
                <fullName>Pending Program</fullName>
                <isActive>false</isActive>
                <label>Pending Program</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>