OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/UID_TMobile__c.field-meta.xml
<CustomField>
    <fullName>UID_TMobile__c</fullName>
    <label>UID TMobile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>